syntax = "proto3";

package cpp;

// Next free id: 2
message HelloWorldRequest {
    optional string name = 1;
}

